tests/hulk/ok/lambdas/lambda_basic.hulk
let f: (Number) -> Number = function (x: Number): Number -> x * 2 in {
    if (f(5) == 10) print("ok") else print("fail");
    if (f(0) == 0) print("ok") else print("fail");
    if (f(-3) == -6) print("ok") else print("fail");
};
