tests/hulk/errors/syntactic/missing_parens.hulk
let x = 5 in
    if x > 3 print("ok");
